--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+/.firebaserc
+/firebase.json
+/firestore.indexes.json
+/firestore.rules
+/remoteconfig.template.json
+/storage.rules
