--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.3.0
-  firebase_auth: ^1.4.1
-  cloud_firestore: ^2.2.2
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^2.2.2
+  flutter_bloc: ^7.0.1
+  meta: ^1.3.0
+  google_sign_in: ^5.0.4
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
