--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   meta: ^1.3.0
   google_sign_in: ^5.0.4
   equatable: ^2.0.3
+  firebase_storage: ^9.0.0
+  image_picker: ^0.8.1+3
 
 dev_dependencies:
   flutter_test:
