--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.3.0
-  firebase_auth: ^1.4.1
+  firebase_auth: ^2.0.0
   cloud_firestore: ^2.2.2
   flutter_bloc: ^7.0.1
   meta: ^1.3.0
@@ -36,6 +36,13 @@ dependencies:
   equatable: ^2.0.3
   firebase_storage: ^9.0.0
   image_picker: ^0.8.1+3
+  provider: ^5.0.0
+  crypto: ^3.0.1
+  encrypt: ^5.0.0
+  local_auth: ^1.1.6
+  flutter_secure_storage: ^4.2.0
+  shared_preferences: ^2.0.6
+  pointycastle: ^3.2.0-rc0
 
 dev_dependencies:
   flutter_test:
