--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_secure_storage: ^4.2.0
   shared_preferences: ^2.0.6
   pointycastle: ^3.2.0-rc0
+  flutter_zoom_drawer: ^2.0.2+4
 
 dev_dependencies:
   flutter_test:
