--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   shared_preferences: ^2.0.6
   pointycastle: ^3.2.0-rc0
   flutter_zoom_drawer: ^2.0.2+4
+  http: ^0.13.3
+  fab_circular_menu: ^1.0.2
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
