--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   fab_circular_menu: ^1.0.2
   google_fonts: ^2.1.0
   flutter_screenutil: ^5.0.0+2
+  flutter_spinkit: ^5.0.0
+  like_button: ^2.0.2
 
 dev_dependencies:
   flutter_test:
