--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   flutter_spinkit: ^5.0.0
   like_button: ^2.0.2
+  dotted_border: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
