--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.3.0
-  firebase_auth: ^2.0.0
+  firebase_auth: ^3.1.3
   cloud_firestore: ^2.2.2
-  flutter_bloc: ^7.0.1
+  flutter_bloc: ^7.3.0
   meta: ^1.3.0
   google_sign_in: ^5.0.4
   equatable: ^2.0.3
-  firebase_storage: ^9.0.0
+  firebase_storage: ^10.0.5
   image_picker: ^0.8.1+3
-  provider: ^5.0.0
+  provider: ^6.0.1
   crypto: ^3.0.1
   encrypt: ^5.0.0
   local_auth: ^1.1.6
@@ -51,10 +51,13 @@ dependencies:
   flutter_spinkit: ^5.0.0
   like_button: ^2.0.2
   dotted_border: ^2.0.0+1
+  bloc: ^7.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
