--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.3.0
+  firebase_core: ^1.7.0
   firebase_auth: ^3.1.3
-  cloud_firestore: ^2.2.2
+  cloud_firestore: ^2.5.3
   flutter_bloc: ^7.3.0
   meta: ^1.3.0
-  google_sign_in: ^5.0.4
+  google_sign_in: ^5.1.1
   equatable: ^2.0.3
   firebase_storage: ^10.0.5
   image_picker: ^0.8.1+3
@@ -52,6 +52,7 @@ dependencies:
   like_button: ^2.0.2
   dotted_border: ^2.0.0+1
   bloc: ^7.2.1
+  bloc_concurrency: ^0.1.0
 
 dev_dependencies:
   flutter_test:
