--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   bloc: ^7.2.1
   bloc_concurrency: ^0.1.0
   flip_card: ^0.6.0
+  url_launcher: ^6.1.4
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
