--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,38 +27,43 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.7.0
-  firebase_auth: ^3.1.3
-  cloud_firestore: ^2.5.3
-  flutter_bloc: ^7.3.0
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.4
+  cloud_firestore: ^4.1.0
+  flutter_bloc: ^8.1.1
   meta: ^1.3.0
   google_sign_in: ^5.1.1
   equatable: ^2.0.3
-  firebase_storage: ^10.0.5
+  firebase_storage: ^11.0.6
   image_picker: ^0.8.1+3
   provider: ^6.0.1
   encrypt: ^5.0.0
-  flutter_secure_storage: ^4.2.0
+  flutter_secure_storage: ^6.1.0
   shared_preferences: ^2.0.6
-  flutter_zoom_drawer: ^2.0.2+4
+  flutter_zoom_drawer: ^3.0.3
   http: ^0.13.3
   fab_circular_menu: ^1.0.2
-  google_fonts: ^2.1.0
+  google_fonts: ^3.0.1
   flutter_screenutil: ^5.0.0+2
   flutter_spinkit: ^5.0.0
   like_button: ^2.0.2
   dotted_border: ^2.0.0+1
-  bloc: ^7.2.1
-  bloc_concurrency: ^0.1.0
+  bloc: ^8.1.0
+  bloc_concurrency: ^0.2.0
   flip_card: ^0.6.0
   url_launcher: ^6.1.4
   url_strategy: ^0.2.0
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
+  build_runner: ^2.3.2
+  freezed: ^2.2.1
+  json_serializable: ^6.5.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
